feat: added auth routes
