# pkg/api/router/router.go
@@ -3,14 +3,11 @@ package router
 import (
 	"net/http"
 
+	"github.com/Manjit2003/samespace/pkg/api/handler"
 	"github.com/Manjit2003/samespace/pkg/api/middleware"
 	"github.com/gorilla/mux"
 	httpSwagger "github.com/swaggo/http-swagger/v2"
 )
-
-func handler(w http.ResponseWriter, _ *http.Request) {
-	w.Write([]byte("Hellow world"))
-}
 
 func MakeRouter() *mux.Router {
 
@@ -22,8 +19,15 @@ func MakeRouter() *mux.Router {
 		httpSwagger.DomID("swagger-ui"),
 	)).Methods(http.MethodGet)
 
-	r.Use(middleware.LoggingMiddleware)
+	v1 := r.PathPrefix("/api/v1").Subrouter()
+	{
+		v1.Use(middleware.LoggingMiddleware)
+
+		authRouter := v1.PathPrefix("/auth").Subrouter()
+		authRouter.HandleFunc("/login", handler.HandleUserLogin).Methods("POST")
+		authRouter.HandleFunc("/register", handler.HandleUserRegister).Methods("POST")
+		authRouter.HandleFunc("/refresh", handler.HandleGetAccessToken).Methods("POST")
+	}
 
 	return r
-
 }
